Finished. I fixed the horizontal scrolling. Everything is working well now.

--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@
     box-sizing: border-box;
     font-family:"Roboto", sans-serif;
 }
-.layout {
+
+body{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
+}
+/* .layout {
     width: 100vw;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 5fr;
-}
+} */
 .sidebar {
     background-color: var(--sidebarColor);
     grid-column: 1 / 2;
@@ -256,7 +262,9 @@ button {
     display: grid;
     grid-template-rows: repeat(4 1fr);
 }
-
+.trending-container {
+    padding-top: 16px;
+}
 .trend{
     margin: 16px;
     display: flex;
